cmake_minimum_required(VERSION 3.24)
project(Algorithm)

set(CMAKE_CXX_STANDARD 17)

# compile option
#ADD_COMPILE_OPTIONS ( -Wall -Wextra -Werror )

#add_executable(Algorithm main.cpp problem_25206.cpp problem_2751.cpp problem_test.cpp)
add_executable(problem_25206 problem_25206.cpp problem_1700.cpp problem_1806.cpp problem_2933.cpp problem_7576_bfs.cpp problem_1012.cpp problem_13460.cpp problem_12100.cpp problem_3190.cpp problem_13458.cpp problem_14499.cpp problem_14500_dfs.cpp problem_1753_dijkstra.cpp problem_14501_dp.cpp problem_9095_dp.cpp problem_15683_simulation.cpp problem_15684_dfs.cpp assignment1.c assignment2.c problem_11724_dfs.cpp problem_10026_dfs.cpp problem_15685_simulation.cpp assignment3.c assignment4.c assignment5.c assignment6.c assignment7.c assignment8.c assignment9.c assignment10.c assignment11.c lecture.cpp problem_15686_bruteforce.cpp problem_5373.cpp)
add_executable(problem_2751 problem_2751.cpp)
add_executable(problem_test problem_test.cpp)
add_executable(problem_1700 problem_1700.cpp)
add_executable(problem_1806 problem_1806.cpp)
add_executable(problem_1181 problem_1181.cpp)
add_executable(problem_2933 problem_2933.cpp)
add_executable(problem_7576_bfs problem_7576_bfs.cpp)
add_executable(problem_1012 problem_1012.cpp)
add_executable(problem_13460 problem_13460.cpp)
add_executable(problem_12100 problem_12100.cpp)
add_executable(problem_3190 problem_3190.cpp)
add_executable(problem_13458 problem_13458.cpp)
add_executable(problem_14499 problem_14499.cpp)
add_executable(problem_14500 problem_14500_dfs.cpp)
add_executable(problem_1753_dijkstra problem_1753_dijkstra.cpp)
add_executable(problem_14501_dp problem_14501_dp.cpp)
add_executable(problem_9095_dp problem_9095_dp.cpp)
add_executable(problem_15683 problem_15683_simulation.cpp)
add_executable(problem_15684 problem_15684_dfs.cpp)
add_executable(assignment1 assignment1.c problem_15686_bruteforce.cpp)
add_executable(assignment2 assignment2.c)
add_executable(problem_11724_dfs problem_11724_dfs.cpp)
add_executable(problem_10026_dfs problem_10026_dfs.cpp)
add_executable(problem_15685 problem_15685_simulation.cpp)
add_executable(assignment3 assignment3.c)
add_executable(assignment4 assignment4.c)
add_executable(assignment5 assignment5.c)
add_executable(assignment6 assignment6.c)
add_executable(assignment7 assignment7.c)
add_executable(assignment8 assignment8.c)
add_executable(assignment9 assignment9.c)
add_executable(assignment10 assignment10.c)
add_executable(lecture lecture.cpp)
add_executable(assignment11 assignment11.c)

#add_executable(CMakeLists CMakeLists.txt)


add_executable(problem_15686 problem_15686_bruteforce.cpp)
add_executable(problem_5373 problem_5373.cpp)